--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,6 @@
 <body>
     <p>Hello Coursea</p>
     <p>This is another modified line.</p>
-    <p>This will be the first step to front end webdevelopment journey.</p>
+    <p>This is the first step toward front end webdevelopment technology.</p>
 </body>
 </html>
