--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,6 @@
     <p>Hello Coursea</p>
     <p>This is another modified line.</p>
     <p>This is the first step toward front end webdevelopment technology.</p>
+    <p>This is another additon at mon of 7.</p>
 </body>
 </html>
